--- a/NETFLIX WEBSITE/NETFLIX/index.html
+++ b/NETFLIX WEBSITE/NETFLIX/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NETFLIX</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="main">
         <nav>
             <span><img width="100" src="assets/images/logo.svg" alt=""></span>
             <div>
-                <button>English</button>
-                <button>Sign in</button>
+                <button class="btn">English</button>
+                <button class="btn btn-red-sm">Sign in</button>
             </div>
         </nav>
         <div class="box">
@@ -21,10 +23,13 @@
             <span>Unlimited movies, TV shows and more</span>
             <span>Watch anywhere. Cancel anytime.</span>
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
-            <div><input type="text" placeholder="Email Address">
-            <button>Get Started</button>
+            <div class="hero-buttons">
+                <input type="text" placeholder="Email Address">
+                <button class="btn btn-red">Get Started</button>
             </div>
         </div>
     </div>
+    <div class="seperation"></div>
 </body>
-</html> 
+
+</html>
