--- a/NETFLIX WEBSITE/NETFLIX/index.html
+++ b/NETFLIX WEBSITE/NETFLIX/index.html
@@ -25,11 +25,27 @@
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="hero-buttons">
                 <input type="text" placeholder="Email Address">
-                <button class="btn btn-red">Get Started</button>
+                <button class="btn btn-red">Get Started &gt;</button>
             </div>
         </div>
     </div>
     <div class="seperation"></div>
+
+    <section class="first">
+        <div>
+            <span>
+            Enjoy on your TV
+            </span>
+            <span>
+            Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.
+            </span>
+        </div>
+
+        <div class="secimg"><img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="">
+        <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v " autoplay loop muted ></video></div>
+    </section>
+    <div class="seperation"></div>
+
 </body>
 
 </html>
