--- a/NETFLIX/index.html
+++ b/NETFLIX/index.html
@@ -165,9 +165,9 @@
         >
         <div class="input">
           <input type="text" placeholder="Email address" />
-          <button class="btn btn-red">Get Started</button>
+          <button class="btn btn-red">Get Started &gt;</button>
         </div>
-      </div>
+    </div>
 
 
     <div class="seperation"></div>
