--- a/NETFLIX/index.html
+++ b/NETFLIX/index.html
@@ -13,7 +13,14 @@
         <nav>
             <span><img width="100" src="assets/images/logo.svg" alt=""></span>
             <div>
-                <button class="btn">English</button>
+                <button class="btn2">
+                    <i class="fa-solid fa-language"></i>
+                    <select>
+                      <option value="English">English</option>
+                      <option value="Hindi">Hindi</option>
+                    </select>
+                  </button>
+                
                 <button class="btn btn-red-sm">Sign in</button>
             </div>
         </nav>
@@ -66,7 +73,7 @@
 
     <div class="seperation"></div>
 
-    <section class="first trd">
+    <section class="first third">
         <div>
             <span>
                 Watch everywhere
@@ -76,7 +83,7 @@
             </span>
         </div>
 
-        <div class="secimg"><img
+        <div class="secimgthird"><img
                 src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile-in.png" alt="">
             <video src="assets/videos/video1.m4v" autoplay loop muted></video>
         </div>
@@ -156,7 +163,7 @@
 
     </section>
 
-    <div class="hero">
+    <div class="hero2">
         <span></span>
         <span></span>
         <span
